plan: Some sort of draft

--- a/concl.tex
+++ b/concl.tex
@@ -21,7 +21,6 @@ and based on the presented survey of the field, I believe looking into
 vector embedding approaches when manipulating natural text
 (analyzing the question, understanding answer-bearing
 passages and relation labels) is a highly promising area of research.
-
 Some scientific problems that I would like to tackle are connected
 to the current limitations of vector embeddings themselves.
 This includes building compound vector embeddings conveying
@@ -34,17 +33,16 @@ Other scientific problems related to Information Extraction that
 I plan to explore are in particular testing various relation
 extraction strategies in the unstructured knowledge base context
 and improving performance in this sub-task.
-I expect to achieve the best results by building embedded
-representation of the manipulated data and leveraging it within
-the appropriate classifiers.
-My sight is also set at using embeddings even
-for tasks beyond basic factoid QA like performing basic inference,
+My sight is also set at tasks beyond basic factoid QA like performing basic inference,
 though it is unclear if it will eventually fall in the scope of my
 thesis as well.
 
 However, improving the system performance might lead to interesting
 results in other parts of the system, involving Entity Linking,
 Information Retrieval, Result Ranking etc.
+
+In summary, I would like to propose a thesis studying
+\textbf{Semantic Methods in Question Answering}.
 
 \section{Acknowledgements}
 
